add custom font

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <a href="https://github.com/Jungle-Bus/osmtracker-layouts">OSM Tracker Jungle Bus layouts</a>
             and uploaded to
             <a href="https://www.openstreetmap.org/traces/tag/bus%20route">openstreetmap.org</a>) to a set of ways that can be used to create a route relation in JOSM.
+
+            <p></p>
+            <a href="https://github.com/Jungle-Bus/Voodoo"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/91/Octicons-mark-github.svg/30px-Octicons-mark-github.svg.png" alt="learn more on github"></a>
         </footer>
     </body>
 </html>
