add duration compute

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <a id="gpx_link"></a>
                     <a id="josm_link"></a>
                     <p></p>
+                    <div id="track_metadata"></div>
                     <div id="errors"></div>
                 </section>
             </center>
